[tool.poetry]
name = "orbbot"
version = "0.1.0"
description = ""
authors = ["valien <valien.r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "1.4.1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jupyter = "^1.0.0"
pandas = "^1.1.4"
psycopg2 = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
